# new

./: README.md  ppc.xml  ppcmsg.xml  联系方式.txt
chatsvr/ppc2/: AwardBase.cpp  AwardBase.h  BigRoomServer.cpp  BigRoomServer.h  BigRoomd.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Room.cpp  Room.h  RoomManager.h  User.cpp  User.h  UserManager.cpp  UserManager.h  beanstalkMsg.cpp  beanstalkMsg.h  beanstalkdef.h  bigroomdef.h  cmake_install.cmake  configure.in  dbAccess.cpp  dbAccess.h  kafkalog.cpp  kafkalog.h  msg.xml  option.h  ppc.xml  ppc2.sln  ppc2.vcproj  ppc2.vcxproj  ppc2.vcxproj.filters  ppcAward.h  touch.sh  新碰碰车web后台设置说明.docx
chatsvr/roomcomm/: RoomPacketRecv.cpp  RoomPacketRecv.h
chatsvr/tools/: Singleton.h  common.cpp  common.h  kafkaProducter.cpp  kafkaProducter.h  performance.cpp  performance.h
common/ACE_wrappers/: ACE_vc10.sln  ACE_vc71.sln  ACE_vc71_Static.sln  ACE_vc8.sln  ACE_vc8_Static.sln  ACE_vc8_WinCE.sln  ACE_vc9.sln  ACE_vc9_Static.sln  ACE_wrappers_vc71.sln  ACE_wrappers_vc71_Static.sln  ACE_wrappers_vc8.sln  ACE_wrappers_vc8_Static.sln  ACE_wrappers_vc8_WinCE.sln  ACE_wrappers_vc9.sln  ACE_wrappers_vc9_Static.sln  GNUmakefile  UpgradeLog3.XML  configure
common/ACE_wrappers/ACEXML/: ACEXML_vc71.sln  ACEXML_vc71_Static.sln  ACEXML_vc8.sln  ACEXML_vc8_Static.sln  ACEXML_vc8_WinCE.sln  ACEXML_vc9.sln  ACEXML_vc9_Static.sln  GNUmakefile
common/ACE_wrappers/ASNMP/: ASNMP_vc71.sln  ASNMP_vc71_Static.sln  ASNMP_vc8.sln  ASNMP_vc8_Static.sln  ASNMP_vc8_WinCE.sln  ASNMP_vc9.sln  ASNMP_vc9_Static.sln  GNUmakefile
common/ACE_wrappers/Kokyu/: GNUmakefile  Kokyu_vc71.sln  Kokyu_vc71.vcproj  Kokyu_vc71_Static.sln  Kokyu_vc71_Static.vcproj  Kokyu_vc8.sln  Kokyu_vc8.vcproj  Kokyu_vc8_Static.sln  Kokyu_vc8_Static.vcproj  Kokyu_vc8_WinCE.sln  Kokyu_vc8_WinCE.vcproj  Kokyu_vc9.sln  Kokyu_vc9.vcproj  Kokyu_vc9_Static.sln  Kokyu_vc9_Static.vcproj
common/ACE_wrappers/ace/: ACE_vc10.vcxproj  ACE_vc71.vcproj  ACE_vc71_Static.vcproj  ACE_vc8.vcproj  ACE_vc8_Static.vcproj  ACE_vc8_WinCE.vcproj  ACE_vc9.sdf  ACE_vc9.vcproj  ACE_vc9.vcxproj  ACE_vc9.vcxproj.filters  ACE_vc9_Static.vcproj  GNUmakefile  OS_NS_stdio.h  UpgradeLog.XML  UpgradeLog2.XML  UpgradeLog3.XML  UpgradeLog4.XML  ace_vc71.sln  ace_vc71_Static.sln  ace_vc8.sln  ace_vc8_Static.sln  ace_vc8_WinCE.sln  ace_vc9.sln  ace_vc9_Static.sln  config-macosx-leopard.h  config.h
common/ACE_wrappers/apps/: GNUmakefile  apps_vc71.sln  apps_vc71_Static.sln  apps_vc8.sln  apps_vc8_Static.sln  apps_vc8_WinCE.sln  apps_vc9.sln  apps_vc9_Static.sln
common/ACE_wrappers/contrib/: contrib_vc8_WinCE.sln
common/ACE_wrappers/docs/: Download.html
common/ACE_wrappers/etc/: index.html
common/ACE_wrappers/examples/: GNUmakefile  examples_vc71.sln  examples_vc71_Static.sln  examples_vc8.sln  examples_vc8_Static.sln  examples_vc8_WinCE.sln  examples_vc9.sln  examples_vc9_Static.sln
common/ACE_wrappers/lib/: ACE572_10.exp  ACE572_10.lib  ACE572_10d.exp  ACE572_10d.lib  ACE572d.lib
common/ACE_wrappers/netsvcs/: GNUmakefile  netsvcs_vc71.sln  (+6 more)
common/GameComm/: CMakeLists.txt  CocGameComm.cpp  CocGameComm.h  CocGameComm.sln  CocGameComm.vcxproj  CocGameComm.vcxproj.filters  Singleton.h  TcpPacket.cpp  TcpPacket.h  jsoncmd.hpp  mobiledef.h  testmain.cpp
common/GameStruct/: COCGameBase.h  CocCmdDefine.h  CocStruct.h  gamecom.h
common/cache/: cache_client.cpp  cache_client.h  cachedefine.h
common/dbclient/: dbclient.h  dbclient4anycast.h  dbclient4coc.h  dbclient4game.h  example.cpp
common/im/: Commondef.h  IMCientDefine.h  IMCommonDef.h  IMContact.cpp  IMContact.h  IMProduct.h  IMTypes.h  MobileImType.h  Projectdefine.h  imdefine.h  zygamedefine.h
common/include/: BlockManager.h  GenericObjectPool.cpp  GenericObjectPool.h  Markup.h  ObjectPool.cpp  ObjectPool.h  PoolableObjectFactory.h  SmartBuffer.h  TinyMarkup.h  UniTcpPacket.h  baseHttpClient.h  baseHttpServer.h  baseServer.h  basictypes.h  byteorder.h  commondef.h  corethread.h  coretime.h  debug_new.h  elasticSearchHttp.h  i18n.h  icqsocket.h  icqtypes.h  list.h  log.h  md5class.h  mysqldbmanager.h  ndes.h  packet.h  pipe.h  qedit.h  queue.h  slab.h  socketaddress.h  sync.h  tcpConnector.h  tcpServer.h  tcppacket.h  udpServer.h  udppacket.h  (+2 more)
common/lib/: libdbclientd.exp  orend.exp
common/media/: OrenClient.h  mediatype.h
common/msgswitch/: beanstalkclient.h  msgswitchdef.h
common/room/: RoomCmdDef.h  RoomCommon.h
common/tlcrypto/: CMakeLists.txt  ReadMe.txt  tlcrypto.cpp  tlcrypto.h  tlcrypto.sln  tlcrypto.vcxproj
common/tlcrypto/openssl/lib/: libeay32.lib  ssleay32.lib
(+5992 files in other folders)
