KE_OPTIONS= foreign
bin_PROGRAMS= zz_tax 
zz_tax_LDADD = ../../common/utility/libcommon.a -lpthread -lACE  
zz_tax_SOURCES=../roomcomm/RoomPacketRecv.cpp BigRoomd.cpp AwardBase.cpp BigRoomServer.cpp cachesrvman.cpp msgcliman.cpp msgclimdl.cpp option.cpp Room.cpp RoomManager.cpp User.cpp UserManager.cpp  
zz_tax_CPPFLAGS=-I ../../common -I ../../common/include -Wall -O2 -D_CONSOLE -pipe -Wno-invalid-offsetof -fcheck-new -g -D_ACE_SOCK -D_POSIX_THREADS -D_POSIX_THREAD_SAFE_FUNCTIONS -D_REENTRANT 


